# GamesEngineering3

./: .gitignore  CMakeLists.txt  README.md
Space_Invaders/: bullet.cpp  bullet.h  game.h  main.cpp  ship.cpp  ship.h
Tile_Engine/: LevelSystem.cpp  LevelSystem.h  main.cpp  player.cpp
practical_1/: Animation.cpp  Animation.h  Bitmask.cpp  Bitmask.h  C_Animation.cpp  C_Animation.h  C_BoxCollider.cpp  C_BoxCollider.h  C_Camera.cpp  C_Camera.h  C_Collider.cpp  C_Collider.h  C_Drawable.cpp  C_Drawable.h  C_InstanceID.cpp  C_InstanceID.h  C_KeyboardMovement.cpp  C_KeyboardMovement.h  C_Sprite.cpp  C_Sprite.h  C_Transform.cpp  C_Transform.h  Component.h  Debug.cpp  Debug.h  Game.cpp  Game.h  Input.cpp  Input.h  Object.cpp  Object.h  ObjectCollection.cpp  ObjectCollection.h  Quadtree.cpp  Quadtree.h  ResourceAllocator.h  S_Collidable.cpp  S_Collidable.h  S_Drawable.cpp  S_Drawable.h  (+16 more)
